--- a/contacts.css
+++ b/contacts.css
@@ -1,9 +1,3 @@
-.contacts__title {
-  text-align: center;
-  font-weight: 700;
-  font-size: 40px;
-  font-style: normal;
-}
 
 .contacts__wrapper {
   font-weight: 700;
@@ -11,13 +5,13 @@
   font-style: normal;
 }
 
-.contacts__address, .contacts__phone, .contacts__mail {
-  display: flex;
-  justify-content: flex-start;
-  gap: 30px;
+.contacts__address {
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 50px;
 }
 
-.contacts__icon__phone, .contacts__icon__mail {
+.contacts__icon {
     margin-right: 30px;
 }
 
@@ -35,20 +29,4 @@
 	height: 50px;
     margin-top: 36px;
     border-radius: 50%;
-}
-
-.social__vk {
-    background-image: url(img/icon/vk.svg);
-}
-
-.social__tg {
-    background-image: url(img/icon/tg.svg);
-}
-
-.social__pinterest {
-    background-image: url(img/icon/pinterest.svg);
-}
-
-.social__stumbleupon {
-    background-image: url(img/icon/stumbleupon.svg);
 }
