--- a/faq.css
+++ b/faq.css
@@ -1,5 +1,5 @@
 
-.popular__questions {
+.popular-questions__text {
     background-color: #fff;
     color: #1C1A1A;
     font-weight: 700;
@@ -9,12 +9,12 @@
     justify-content: space-between;
 }
 
-.popular__questions:nth-of-type(even) {
+.popular-questions__text:nth-of-type(even) {
     color: #fff;
     background-color: #440F51;
 }
 
-.popular__questions:nth-of-type(even):after {
+.popular-questions__text:nth-of-type(even):after {
     content: "";
     width: 40px;
     height: 40px;
@@ -23,7 +23,7 @@
     float: right;
 }
 
-.popular__questions:nth-of-type(odd):after {
+.popular-questions__text:nth-of-type(odd):after {
     content: "";
     width: 40px;
     height: 40px;
