--- a/style.css
+++ b/style.css
@@ -1,63 +1,6 @@
-html {
-  box-sizing: border-box;
-}
-
-* {
-  box-sizing: inherit;
-  position: relative;
-}
-
-body {
-  min-width: 320px;
-  min-height: 100vh;
-
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-
-  background-color: #1b1a1b;
-  color: #ffffff;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-button {
-  cursor: pointer;
-}
-
-.container {
-  max-width: 1240px;
-  padding: 0 30px;
-  margin: 0 auto;
-  }
-
-  section {
-    padding: 100px;
-  }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-h1, h2, h3, p, figure, fieldset {
-  margin: 0;
-}
-
-h2 {
-  margin-bottom: 50px;
-  text-align: center;
-  font-weight: 700;
-  font-size: 40px;
-  font-style: normal;
-  text-transform: uppercase;
-}
+@import url(main.css);
+@import url(faq.css);
+@import url(halls.css);
+@import url(about_us.css);
+@import url(contacts.css);
+@import url(game_over.css);
