add img in On us

--- a/style/about_us.css
+++ b/style/about_us.css
@@ -1,3 +1,17 @@
+.about-us__wrapper {
+  display: flex;
+}
+
+.about-us__img {
+  min-width: 600px;
+  min-height: 596px;
+  margin-right: 80px;
+}
+
+.about-us__content {
+
+}
+
 .about-us__title {
   text-align: center;
   font-weight: 700;
@@ -6,12 +20,17 @@
 }
 
 .about-us__text {
+  margin-bottom: 64px;
   font-weight: 400;
   font-size: 20px;
 }
 
+.about-us__paragraph-one {
+  margin-bottom: 42px;
+}
+
 .about-us__citate {
-  margin-bottom: 55px;
+  margin-bottom: 42px;
 }
 
 .about-us__citate-text {
@@ -45,7 +64,7 @@
 
 .about-us__creator-photo {
   display: block;
-  background-image: url(img/Arkady.jpg);
+  background-image: url(/img/about_us/Arkady.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 80px;
