--- a/style/faq.css
+++ b/style/faq.css
@@ -1,4 +1,3 @@
-
 .popular-questions__text {
     background-color: #fff;
     color: #1C1A1A;
@@ -18,7 +17,7 @@
     content: "";
     width: 40px;
     height: 40px;
-    background-image: url(img/open.svg);
+    background-image: url(/img/open.svg);
     background-size: contain;
     float: right;
 }
@@ -27,7 +26,7 @@
     content: "";
     width: 40px;
     height: 40px;
-    background-image: url(img/open-purple.svg);
+    background-image: url(/img/open-purple.svg);
     background-size: contain;
     float: right;
 }
