--- a/style/halls.css
+++ b/style/halls.css
@@ -5,15 +5,19 @@
 }
 
 .halls__list {
-    display: grid;
+  
 }
 
 .halls__name {
-    width: auto;
-    height: 710px;
-	margin-top: 60px;
+    display: inline-block;
+    width: 580px ;
+    height: 349px;
+    margin-bottom: 20px;
     list-style-type: none;
-	
+}
+
+.halls__name:not(:nth-child(2n)) {
+    margin-right: 15px;
 }
 
 .halls__link {
@@ -27,6 +31,7 @@
 }
 
 .halls__title {
+    padding-bottom: 60px;
     font-weight: 700;
     font-size: 40px;
 }
