--- a/style/about_us.css
+++ b/style/about_us.css
@@ -64,7 +64,7 @@
 
 .about-us__creator-photo {
   display: block;
-  background-image: url(../img/about_us/Arkady.jpg);
+  background-image: url(../../img/about_us/Arkady.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 80px;
