--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+  padding-top: 30px;
   min-width: 320px;
   min-height: 100vh;
 
@@ -16,11 +17,6 @@ body {
 
   background-color: #1b1a1b;
   color: #ffffff;
-}
-
-main {
-  margin-top: 146px;
-  margin-bottom: 87px;
 }
 
 img {
@@ -39,7 +35,8 @@ button {
   }
 
   section {
-    padding-bottom: 100px;
+    padding-bottom: 60px;
+    padding-top: 60px;
   }
 
 a {
