--- a/style/faq.css
+++ b/style/faq.css
@@ -4,8 +4,11 @@
     font-weight: 700;
     font-size: 24px;
     padding: 30px 70px;
-    margin-bottom: 20px;
     justify-content: space-between;
+}
+
+.popular-questions__text:not(:last-child) {
+    margin-bottom: 20px;
 }
 
 .popular-questions__text:nth-of-type(even) {
