--- a/style/reserv.css
+++ b/style/reserv.css
@@ -60,7 +60,7 @@ legend {
     margin-bottom: 18px;
 }
 
-.reserv__information-form {
+.reserv__date-form {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -93,6 +93,9 @@ legend {
 }
 
 .reserv__input-date, .reserv__input-time, .reserv__input-person {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     position: relative;
 }
 
@@ -140,7 +143,9 @@ input::placeholder {
 }
 
 .reserv__button {
-  padding-left: 780px;
+  display: flex;
+  justify-content: flex-end;
+  max-width: 1080px;
 }
 
 .reserv__btn {
